Revert "fix: align dictionary images to the left instead of center"
This reverts commit 3e56a7aeee8759ea1e151c05f6057e1f4e56f301.

--- a/hibiki/assets/popup/popup.css
+++ b/hibiki/assets/popup/popup.css
@@ -181,11 +181,10 @@ a {
 .gloss-image-link {
     cursor: inherit;
     color: var(--accent-color);
-    display: block;
+    display: inline-block;
     position: relative;
     line-height: 1;
     max-width: 100%;
-    text-align: left;
 }
 
 .gloss-image-container-overlay {
